--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,33 @@
+body {
+  background-image: url("./images/bg-horizontal.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.Header, .Description, .Output-section, .Request-button  {
+  background: rgba(224, 224, 244, 0.9);
+  padding: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Description, .Output-section {
+  max-width: 30rem;
+  margin: 2rem auto;
+  padding: 1rem 3rem;
+  border-radius: 1rem 0;
 }
 
-.App-link {
-  color: #61dafb;
+.Request-button {
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Output-section {
+  max-width: 15rem;
+}
+
+.Output-section ul {
+  list-style-type: none;
 }
