--- a/src/App.css
+++ b/src/App.css
@@ -29,5 +29,25 @@ body {
 }
 
 .Output-section ul {
+  padding: 0;
+  margin: 0;
   list-style-type: none;
+}
+
+.Output-section ul li {
+  display: flex;
+  justify-content: center;
+}
+
+.Output-section ul li span {
+  flex: 1 1;
+}
+
+.Output-section ul li span:first-child {
+  text-align: right;
+  padding-right: 4px;
+}
+
+.Output-section ul li span:last-child {
+  text-align: left;
 }
